--- a/Compra.html
+++ b/Compra.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <script src="index.js"></script>
     <title>Compra</title>
   </head>
 
