--- a/Estoque.html
+++ b/Estoque.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Compra</title>
+    <title>Estoque</title>
   </head>
 
 
@@ -22,7 +22,7 @@
       <div style="background-color: #d9d9d9; height: 100%; width: 100%;">
 			<div style="display: flex;">
 				<div style="background-color: #747272; padding: 12px;">
-				   <a href="Compra.html">COMPRA</a>
+				   <a href="Cadastro.html">CADASTRO</a>
 				</div>
 				<div style="background-color: #f0f0f0;  padding: 12px;">
 				   <a style="color: black;" href="Estoque.html">ESTOQUE</a>
