--- a/Estoque.html
+++ b/Estoque.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-US">
   <head>
-    <link rel="website icon" type="png" href="img/pngwing.com.png">
+    <link rel="website icon" type="png" href="assets/img/pngwing.com.png">
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -31,7 +31,7 @@
 			<div style="background-color: #f0f0f0; height: 100%; width: 100%; display: flex; flex-direction: column; gap: 18px;">
             
             <ul class="estoque">
-               <li>
+               <li style="border: 0px; background-color: #f0f0f0;">
                    <h3>Data</h3>
                    <h3>ID Produto</h3>
                    <h3>Categoria</h3>
@@ -79,5 +79,6 @@
             </ul>
          </div>
       </div>
+      <script src="JS/index.js"></script>
    </body>
 </html>
