--- a/Cadastro.html
+++ b/Cadastro.html
@@ -36,13 +36,13 @@
       <div class="cadastro">
         <h1>Cadastro de Produto</h1>
         <div style="display: flex; gap: 12px;" class="w-100"> 
-          <input type="text" placeholder="Categoria" class="input-prop" style="flex: 1">
-          <input type="text" placeholder="Nome" class="input-prop" style="flex: 1">
-          <input type="text" placeholder="Modelo" class="input-prop" style="flex: 1">
+          <input id="categoria" type="text" placeholder="Categoria" class="input-prop" style="flex: 1">
+          <input id="nome" type="text" placeholder="Nome" class="input-prop" style="flex: 1">
+          <input id="modelo" type="text" placeholder="Modelo" class="input-prop" style="flex: 1">
         </div>
         <div style="display: flex; gap: 12px;" class="w-100">
-          <input type="text" placeholder="Fornecedor" class="input-prop" style="flex: 1">
-          <input type="text" placeholder="Preço" class="input-prop" style="flex: 1">
+          <input id="fornecedor" type="text" placeholder="Fornecedor" class="input-prop" style="flex: 1">
+          <input id="preco" type="text" placeholder="Preço" class="input-prop" style="flex: 1">
           </div>
 
             <div class="w-100" style="display: flex; justify-content: space-between;">
