--- a/Cadastro.html
+++ b/Cadastro.html
@@ -36,17 +36,17 @@
 
         <div class="flex flex-column gp-12">
           <div style="display: flex; gap: 12px;" class="w-100"> 
-            <input type="text" placeholder="Categoria" class="input-prop" style="flex: 1">
             <input type="text" placeholder="Nome" class="input-prop" style="flex: 1">
-            <input type="text" placeholder="Modelo" class="input-prop" style="flex: 1">
+            <input type="text" placeholder="Categoria" class="input-prop" style="flex: 1">
           </div>
           <div style="display: flex; gap: 12px;" class="w-100">
+            <input type="text" placeholder="Modelo" class="input-prop" style="flex: 1">
             <input type="text" placeholder="Fornecedor" class="input-prop" style="flex: 1">
             <input type="text" placeholder="Preço" class="input-prop" style="flex: 1">
           </div>
-        </div>
-        <div class="w-100" style="display: flex; justify-content: space-between;">  
-          <button style="padding: 12px; background-color: rgb(131, 204, 131)"><strong>Confirmar</strong></button>
+          <div class="w-100 mt-32" style="display: flex; justify-content: center;">  
+            <button style="padding: 12px; background-color: rgb(131, 204, 131)"><strong>Confirmar</strong></button>
+          </div>
         </div>
         <div>
           </div>
