--- a/Estoque.html
+++ b/Estoque.html
@@ -30,7 +30,7 @@
 			</div>
 			<div style="background-color: #f0f0f0; height: 100%; width: 100%; display: flex; flex-direction: column; gap: 18px;">
             
-            <ul class="estoque">
+            <ul id='estoque' class="estoque">
                <li style="border: 0px; background-color: #f0f0f0;">
                    <h3>ID Produto</h3>
                    <h3>Nome</h3>
