--- a/Cadastro.html
+++ b/Cadastro.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-US">
   <head>
-    <link rel="website icon" type="png" href="img/package.png">
+    <link rel="website icon" type="png" href="assets/img/package.png">
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
