--- a/Cadastro.html
+++ b/Cadastro.html
@@ -42,7 +42,7 @@
             <div style="display: flex; gap: 12px;" class="w-100">
               <input id="modelo" type="text" placeholder="Modelo" class="input-prop" style="flex: 1">
               <input id="fornecedor" type="text" placeholder="Fornecedor" class="input-prop" style="flex: 1">
-              <input id="preco" type="text" placeholder="Preço" class="input-prop" style="flex: 1">
+              <input id="preco" type="number" placeholder="Preço" class="input-prop" style="flex: 1">
             </div>
             <div class="w-100 mt-32" style="display: flex; justify-content: center;">  
               <button style="padding: 12px; background-color: rgb(131, 204, 131)" onclick="addEstoque()"><strong>Confirmar</strong></button>
