alterado path para index.js

--- a/Cadastro.html
+++ b/Cadastro.html
@@ -52,7 +52,7 @@
       </div>
     </div>
 
-    <script src="JS/index.js"></script>
+    <script src="index.js"></script>
     <script src="JS/database.js"></script>
   </body>
 </html>
