--- a/Cadastro.html
+++ b/Cadastro.html
@@ -52,7 +52,6 @@
       </div>
     </div>
 
-    <script src="index.js"></script>
-    <script src="JS/database.js"></script>
+    <script src="JS/cadastro.js"></script>
   </body>
 </html>
