--- a/Cadastro.html
+++ b/Cadastro.html
@@ -23,10 +23,13 @@
     <div style="background-color: #d9d9d9; height: 100%; width: 100%;">
       
       <div style="display: flex;">
-        <div style="background-color: #f0f0f0; padding: 12px;">
+        <div style="background-color: #f0f0f0; padding: 12px;  border: 0.5px solid white;">
           <a style="color: black;" href="Cadastro.html">CADASTRO</a>
         </div>
-        <div style="background-color: #747272;  padding: 12px;">
+        <div style="background-color: #747272; padding: 12px;  border: 0.5px solid white;">
+          <a href="Compra.html">COMPRA</a>
+        </div>
+        <div style="background-color: #747272;  padding: 12px;  border: 0.5px solid white;">
           <a href="Estoque.html">ESTOQUE</a>
         </div>
       </div>
@@ -45,7 +48,7 @@
               <input id="preco" type="number" placeholder="Preço" class="input-prop" style="flex: 1">
             </div>
             <div class="w-100 mt-32" style="display: flex; justify-content: center;">  
-              <button style="padding: 12px; background-color: rgb(131, 204, 131)" onclick="addEstoque()"><strong>Confirmar</strong></button>
+              <button style="padding: 3% 6%; background-color: rgb(131, 204, 131)" onclick="addEstoque()"><strong>Confirmar</strong></button>
             </div>
           </div>
         </div>
