--- a/Estoque.html
+++ b/Estoque.html
@@ -21,10 +21,13 @@
       </div>
       <div style="background-color: #d9d9d9; height: 100%; width: 100%;">
 			<div style="display: flex;">
-				<div style="background-color: #747272; padding: 12px;">
+				<div style="background-color: #747272; padding: 12px; border: 0.5px solid white;">
 				   <a href="Cadastro.html">CADASTRO</a>
 				</div>
-				<div style="background-color: #f0f0f0;  padding: 12px;">
+				<div style="background-color: #747272; padding: 12px;  border: 0.5px solid white;">
+				   <a href="Compra.html">COMPRA</a>
+				</div>
+				<div style="background-color: #f0f0f0;  padding: 12px; border: 0.5px solid white;">
 				   <a style="color: black;" href="Estoque.html">ESTOQUE</a>
 				</div>
 			</div>
