--- a/Compra.html
+++ b/Compra.html
@@ -37,17 +37,21 @@
           <h1>Vendas</h1>
           
           <div>
-            <select id="itens">
+            <select id="itens" class="itens">
               <option disabled selected>Selecione ID</option>
             </select>
 
-            <input type="number" placeholder="Quantidade: ">
+            <input type="number" placeholder="Quantidade: " class="itens">
+          </div>
+          
+          <div style="width: 100%; text-align: center;">
+            <h3 class="precos">Preço Individual: </h3>
+            <h3 class="precos">Preço Total: </h3>
           </div>
 
 
               <div class="w-100 mt-32" style="display: flex; justify-content:space-around ">  
                 <button style="padding: 1% 2%; background-color: rgb(131, 204, 131)" onclick="addEstoque()"><strong>Confirmar</strong></button>
-                <h3 style="margin-right: 5%;">Preço Total: R$ 1231,00</h3>
               </div>
             </div>
           </div>
