--- a/Cadastro.html
+++ b/Cadastro.html
@@ -48,13 +48,14 @@
               <input id="preco" type="number" placeholder="Preço" class="input-prop" style="flex: 1">
             </div>
             <div class="w-100 mt-32" style="display: flex; justify-content: center;">  
-              <button style="padding: 3% 6%; background-color: rgb(131, 204, 131)" onclick="addEstoque()"><strong>Confirmar</strong></button>
+              <button id="confirmButton" style="padding: 3% 6%; background-color: rgb(131, 204, 131)"><strong>Confirmar</strong></button>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <script src="JS/cadastro.js"></script>
+    <script src="JS/cadastro.js" type="module"></script>
+
   </body>
 </html>
