--- a/scr/paginas/compra/Compra.html
+++ b/scr/paginas/compra/Compra.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Compra</title>
-    <script src="JS/compra.js" type="module"></script>
+    <script src="compra.js" type="module"></script>
   </head>
 
   <body>
