--- a/scr/paginas/cadastro/Cadastro.html
+++ b/scr/paginas/cadastro/Cadastro.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <script src="JS/cadastro.js" type="module"></script>
+    <script src="cadastro.js" type="module"></script>
     <title>Cadastro</title>
   </head>
 
