--- a/scr/paginas/estoque/Estoque.html
+++ b/scr/paginas/estoque/Estoque.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <script src="JS/estoque.js" type="module"></script>
+    <script src="estoque.js" type="module"></script>
     <title>Estoque</title>
   </head>
 
