--- a/scr/paginas/cadastro/Cadastro.html
+++ b/scr/paginas/cadastro/Cadastro.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <link rel="website icon" type="png" href="assets/img/package.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./../../../styles.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <script src="cadastro.js" type="module"></script>
@@ -22,16 +22,15 @@
 
   <body>
     <div style="background-color: #d9d9d9; height: 100%; width: 100%;">
-      
       <div style="display: flex;">
         <div style="background-color: #f0f0f0; padding: 12px;  border: 0.5px solid white;">
-          <a style="color: black;" href="Cadastro.html">CADASTRO</a>
+          <a style="color: black;" href="./../cadastro/Cadastro.html">CADASTRO</a>
         </div>
         <div style="background-color: #747272; padding: 12px;  border: 0.5px solid white;">
-          <a href="Compra.html">COMPRA</a>
+          <a href="./../compra/Compra.html">COMPRA</a>
         </div>
         <div style="background-color: #747272;  padding: 12px;  border: 0.5px solid white;">
-          <a href="Estoque.html">ESTOQUE</a>
+          <a href="./../estoque/Estoque.html">ESTOQUE</a>
         </div>
       </div>
 
