--- a/scr/paginas/compra/Compra.html
+++ b/scr/paginas/compra/Compra.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en-US">
   <head>
-    <link rel="website icon" type="png" href="assets/img/pngwing.com.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="website icon" type="png" href="./../../../assets/img/pngwing.com.png">
+    <link rel="stylesheet" href="./../../../styles.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Compra</title>
@@ -22,13 +22,13 @@
       <div style="background-color: #d9d9d9; height: 100%; width: 100%;">
         <div style="display: flex;">
           <div style="background-color: #747272; padding: 12px;  border: 0.5px solid white;">
-            <a href="Cadastro.html">CADASTRO</a>
+            <a href="./../cadastro/Cadastro.html">CADASTRO</a>
           </div>
           <div style="background-color: #f0f0f0; padding: 12px;  border: 0.5px solid white;">
-            <a style="color: black;" href="Compra.html">COMPRA</a>
+            <a style="color: black;" href="./../compra/Compra.html">COMPRA</a>
           </div>
           <div style="background-color: #747272;  padding: 12px;  border: 0.5px solid white;">
-            <a href="Estoque.html">ESTOQUE</a>
+            <a href="./../estoque/Estoque.html">ESTOQUE</a>
           </div>
         </div>
         
