--- a/scr/paginas/estoque/Estoque.html
+++ b/scr/paginas/estoque/Estoque.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <link rel="website icon" type="png" href="assets/img/pngwing.com.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./../../../styles.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <script src="estoque.js" type="module"></script>
@@ -21,17 +21,17 @@
     
       </div>
       <div style="background-color: #d9d9d9; height: 100%; width: 100%;">
-			<div style="display: flex;">
-				<div style="background-color: #747272; padding: 12px; border: 0.5px solid white;">
-				   <a href="Cadastro.html">CADASTRO</a>
-				</div>
-				<div style="background-color: #747272; padding: 12px;  border: 0.5px solid white;">
-				   <a href="Compra.html">COMPRA</a>
-				</div>
-				<div style="background-color: #f0f0f0;  padding: 12px; border: 0.5px solid white;">
-				   <a style="color: black;" href="Estoque.html">ESTOQUE</a>
-				</div>
-			</div>
+         <div style="display: flex;">
+            <div style="background-color: #747272; padding: 12px;  border: 0.5px solid white;">
+              <a href="./../cadastro/Cadastro.html">CADASTRO</a>
+            </div>
+            <div style="background-color: #747272; padding: 12px;  border: 0.5px solid white;">
+              <a  href="./../compra/Compra.html">COMPRA</a>
+            </div>
+            <div style="background-color: #f0f0f0;  padding: 12px;  border: 0.5px solid white;">
+              <a style="color: black;" href="./../estoque/Estoque.html">ESTOQUE</a>
+            </div>
+          </div>
 			<div style="background-color: #f0f0f0; height: 100%; width: 100%; display: flex; flex-direction: column; gap: 18px;">
             
             <table id="estoque">
