--- a/scr/paginas/movimentacoes/Movimentacoes.html
+++ b/scr/paginas/movimentacoes/Movimentacoes.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <link rel="website icon" type="png" href="assets/img/pngwing.com.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./../../../styles.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <script src="estoque.js" type="module"></script>
