--- a/scr/paginas/cadastro/Cadastro.html
+++ b/scr/paginas/cadastro/Cadastro.html
@@ -8,32 +8,8 @@
     <script src="cadastro.js" type="module"></script>
     <title>Cadastro</title>
   </head>
-
-  <header>
-        <div style="height: 100%;">
-      <div class="w-100 flex" style="background-color: #4A5565; color: white; justify-content: space-between;">
-        <div style="display: flex; align-items: center; justify-content: center; margin-left: 18px;">
-          <h3>
-            SISTEMA DE ESTOQUE
-          </h3>
-        </div>
-      </div>
-  </header>
-
+  <div id="headerContainer"></div>
   <body>
-    <div style="background-color: #d9d9d9; height: 100%; width: 100%;">
-      <div style="display: flex;">
-        <div style="background-color: #f0f0f0; padding: 12px;  border: 0.5px solid white;">
-          <a style="color: black;" href="./../cadastro/Cadastro.html">CADASTRO</a>
-        </div>
-        <div style="background-color: #747272; padding: 12px;  border: 0.5px solid white;">
-          <a href="./../compra/Compra.html">COMPRA</a>
-        </div>
-        <div style="background-color: #747272;  padding: 12px;  border: 0.5px solid white;">
-          <a href="./../estoque/Estoque.html">ESTOQUE</a>
-        </div>
-      </div>
-
       <div class="cadastro">
         <h1>Cadastro de Produto</h1>
         
