--- a/scr/paginas/movimentacoes/Movimentacoes.html
+++ b/scr/paginas/movimentacoes/Movimentacoes.html
@@ -5,33 +5,12 @@
     <link rel="stylesheet" href="./../../../styles.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <script src="estoque.js" type="module"></script>
+    <script src="movimentacoes.js" type="module"></script>
     <title>Estoque</title>
   </head>
-
+  <div id="headerContainer"></div>
 
    <body>
-      <div style="height: 100%;">
-         <div class="w-100 flex" style="background-color: #4A5565; color: white; justify-content: space-between;">
-         <div style="display: flex; align-items: center; justify-content: center; margin-left: 12px;">
-            <h3>
-               SISTEMA DE ESTOQUE
-            </h3>
-         </div>
-    
-      </div>
-      <div style="background-color: #d9d9d9; height: 100%; width: 100%;">
-			<div style="display: flex;">
-				<div style="background-color: #747272; padding: 12px; border: 0.5px solid white;">
-				   <a href="Cadastro.html">CADASTRO</a>
-				</div>
-				<div style="background-color: #747272; padding: 12px;  border: 0.5px solid white;">
-				   <a href="Compra.html">COMPRA</a>
-				</div>
-				<div style="background-color: #f0f0f0;  padding: 12px; border: 0.5px solid white;">
-				   <a style="color: black;" href="Estoque.html">ESTOQUE</a>
-				</div>
-			</div>
 			<div style="background-color: #f0f0f0; height: 100%; width: 100%; display: flex; flex-direction: column; gap: 18px;">
             
             <table id="estoque">
