--- a/scr/shared/header.html
+++ b/scr/shared/header.html
@@ -8,8 +8,8 @@
   </div>
   
   <div class="flex">
-    <div style="background-color: #f0f0f0; padding: 12px;  border: 0.5px solid white;">
-      <a style="color: black;" href="./../cadastro/Cadastro.html">CADASTRO</a>
+    <div style="background-color: #747272; padding: 12px;  border: 0.5px solid white;">
+      <a href="./../cadastro/Cadastro.html">CADASTRO</a>
     </div>
     <div style="background-color: #747272; padding: 12px;  border: 0.5px solid white;">
       <a href="./../compra/Compra.html">COMPRA</a>
