--- a/scr/shared/header.html
+++ b/scr/shared/header.html
@@ -1,24 +1,28 @@
 <header>
-  <div class="w-100 flex" style="background-color: #4A5565; color: white; justify-content: space-between;">
+  <div class="w-100 flex" style="background-color: rgb(131, 204, 131); color: white; justify-content: space-between;">
     <div style="display: flex; align-items: center; justify-content: center; margin-left: 12px;">
-      <h3>
+      <h3 style='font-size: 30px ;'>
         SISTEMA DE ESTOQUE
       </h3>
     </div>
   </div>
   
-  <div class="flex">
-    <div style="background-color: #747272; padding: 12px;  border: 0.5px solid white;">
+  <div class="flex" style="background-color: #f0f0f0;">
+    <div style="background-color: rgb(131, 204, 131); padding: 12px; border: 0.5px solid rgb(255, 255, 255); border-radius: 
+    7px;">
       <a href="./../cadastro/Cadastro.html">CADASTRO</a>
     </div>
-    <div style="background-color: #747272; padding: 12px;  border: 0.5px solid white;">
-      <a href="./../compra/Compra.html">COMPRA</a>
+    <div style="background-color: rgb(131, 204, 131); padding: 12px; border: 0.5px solid rgb(255, 255, 255); border-radius: 
+    7px;">
+      <a href="./../compra/Compra.html">COM/VEN</a>
     </div>
-    <div style="background-color: #747272;  padding: 12px;  border: 0.5px solid white;">
+    <div style="background-color: rgb(131, 204, 131);  padding: 12px; border: 0.5px solid rgb(255, 255, 255); border-radius: 
+    7px;">
       <a href="./../estoque/Estoque.html">ESTOQUE</a>
     </div>
-    <div style="background-color: #747272;  padding: 12px;  border: 0.5px solid white;">
-        <a href="./../movimentacoes/Movimentacoes.html">MOVIMENTAÇõES</a>
+    <div style="background-color: rgb(131, 204, 131);  padding: 12px; border: 0.5px solid rgb(255, 255, 255); border-radius: 
+    7px;">
+        <a href="./../movimentacoes/Movimentacoes.html">MOVIMENTAÇÕES</a>
       </div>
   </div>
 </header>
