--- a/scr/paginas/cadastro/Cadastro.html
+++ b/scr/paginas/cadastro/Cadastro.html
@@ -11,7 +11,7 @@
   <div id="headerContainer"></div>
   <body>
       <div class="cadastro">
-        <h1>Cadastro de Produto</h1>
+        <h1 class="titulo">Cadastro de Produto</h1>
         
         <div class="flex flex-column gp-12">
             <div style="display: flex; gap: 12px;" class="w-100"> 
