adicionada opcao de destacar botao do header

--- a/scr/shared/header.html
+++ b/scr/shared/header.html
@@ -1,3 +1,19 @@
+<style>
+  .botao {
+    background-color: rgb(131, 204, 131); 
+    padding: 12px; 
+    border: 0.5px solid rgb(255, 255, 255); 
+    border-radius: 7px;
+  }
+
+  .highlighted {
+    background-color: rgb(35, 160, 87);
+    font-weight: 600;
+  }
+</style>
+
+
+
 <header>
   <div class="w-100 flex" style="background-color: rgb(131, 204, 131); color: white; justify-content: space-between;">
     <div style="display: flex; align-items: center; justify-content: center; margin-left: 12px;">
@@ -8,20 +24,16 @@
   </div>
   
   <div class="flex" style="background-color: #f0f0f0;">
-    <div style="background-color: rgb(131, 204, 131); padding: 12px; border: 0.5px solid rgb(255, 255, 255); border-radius: 
-    7px;">
+    <div id="botaoCadastro" class="botao">
       <a href="./../cadastro/Cadastro.html">CADASTRO</a>
     </div>
-    <div style="background-color: rgb(131, 204, 131); padding: 12px; border: 0.5px solid rgb(255, 255, 255); border-radius: 
-    7px;">
+    <div id="botaoCompra" class="botao">
       <a href="./../compra/Compra.html">COM/VEN</a>
     </div>
-    <div style="background-color: rgb(131, 204, 131);  padding: 12px; border: 0.5px solid rgb(255, 255, 255); border-radius: 
-    7px;">
+    <div id="botaoEstoque" class="botao">
       <a href="./../estoque/Estoque.html">ESTOQUE</a>
     </div>
-    <div style="background-color: rgb(131, 204, 131);  padding: 12px; border: 0.5px solid rgb(255, 255, 255); border-radius: 
-    7px;">
+    <div id="botaoMovimentacoes" class="botao">
         <a href="./../movimentacoes/Movimentacoes.html">MOVIMENTAÇÕES</a>
       </div>
   </div>
